--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,19 @@
 set -g default-terminal "screen-256color"
-
+set-option -sg escape-time 10
 set -g prefix C-j 
+set-option -g focus-events on
+set-option -ga terminal-overrides '$TERM:Tc'
+set-option -sa terminal-overrides '$TERM:RGB'
 set -g base-index 1 # start index from 1
 setw -g pane-base-index 1 # start index from 1
 unbind C-b
 bind-key C-j send-prefix
 
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}" 
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -36,7 +39,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
 # Set themeto cyan
-set -g @themepack 'powerline/block/cyan'
+# Commenting below as trying out new theme
+# set -g @themepack 'powerline/block/cyan'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'dreamofcode-io/catppucin-tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
